# dwsimpy

./: .gitignore  README.md  run_dwsim.py
.github/workflows/: build-native.yml
docs/: NET10_PORT_PLAN.md
dwsimpy_package/: pyproject.toml  setup.py  test_dwsimpy.py
dwsimpy_package/dwsimpy/: .runtimeconfig.json  __init__.py
dwsimpy_package/dwsimpy/libs/: DWSIM.FlowsheetBase.Properties.resources  DWSIM.FlowsheetBase.Strings.resources  DWSIM.Thermodynamics.Strings.resources  DWSIM.UnitOperations.Strings.resources  PetAz.dylib  Properties.resx  Strings.resx
dwsimpy_package/scripts/: audit_dwsim_source.py  audit_managed_runtime.py  native_manifest.py  smoke_test.py  stage_platform_runtime.py  validate_native_artifacts.py  validate_wheel_contents.py
examples/: solve_existing_flowsheet.py
native_libs_arm64/: PetAz.c
src/DWSIM.GlobalSettings/: DWSIM.GlobalSettings.vbproj  Settings.vb
src/DWSIM.Interfaces/: DWSIM.Interfaces.vbproj  Enums.vb  IAIAssistedConvergence.vb  IANNModel.vb  IAttachedUtility.vb  IChart.vb  ICompound.vb  ICompoundConstantProperties.vb  IDimension.vb  IDynamicsIntegrator.vb  IDynamicsManager.vb  IDynamicsMonitoredVariable.vb  IExtender.vb  IExternalUnitOperation.vb  IFileDatabaseProvider.vb  IFlashAlgorithm.vb  IFlowsheet.vb  IFlowsheetEvents.vb  IFlowsheetOptions.vb  IFlowsheetSolveCallback.vb  IGHGEmissions.vb  IGraphicObject.vb  IMaterialStream.vb  IPersistStream.vb  IPhase.vb  IPhaseProperties.vb  IPoint.vb  IPropertyPackage.vb  IReaction.vb  IReactionSet.vb  IReactionSetBase.vb  IReactionStoichBase.vb  IScript.vb  ISimulationObject.vb  ISolidParticleSizeDistribution.vb  ISpecialOps.vb  ISplashScreen.vb  IUndoRedoAction.vb  IUnitOperation.vb  IUnitsOfMeasure.vb  (+2 more)
src/DWSIM.MathOps.DotNumerics/: DWSIM.MathOps.DotNumerics.csproj
src/DWSIM.MathOps.Mapack/: DWSIM.MathOps.Mapack.csproj
src/DWSIM.MathOps.RandomOps/: DWSIM.MathOps.RandomOps.csproj
src/DWSIM.MathOps.SimpsonIntegrator/: DWSIM.MathOps.SimpsonIntegrator.csproj
(+42 files in other folders)
