[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dwsimpy"
version = "1.0.1"
description = "DWSIM Chemical Process Simulation for Python"
license = "GPL-3.0-only"
requires-python = ">=3.10"
dependencies = [
    "pythonnet>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/volkan-a/dwsimpy"
Repository = "https://github.com/volkan-a/dwsimpy"
Issues = "https://github.com/volkan-a/dwsimpy/issues"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["dwsimpy"]
include-package-data = true

[tool.setuptools.package-data]
dwsimpy = [".runtimeconfig.json", "libs/*", "libs/**/*"]

[tool.cibuildwheel]
build = "cp310-*"
skip = "*-musllinux_*"
test-command = "python -c \"import dwsimpy; print('dwsimpy import ok')\""
